hojasGUI y modificarGUI mejoradas